Fixed some layout issues

--- a/src/app/components/tfr-creation-resource/tfr-creation-resource.component.scss
+++ b/src/app/components/tfr-creation-resource/tfr-creation-resource.component.scss
@@ -34,7 +34,7 @@
 }
 
 #resource_div {
-  padding: 10px;
+  padding: 1rem;
   width: 100%;
 }
 
